Fix mobile overflow issue on participants list.

--- a/winter/styles/style.scss
+++ b/winter/styles/style.scss
@@ -690,6 +690,11 @@ $dropdown-caret-color:           #000;
   }
   .participants .person .name, .participants .person .email {
     margin-left: 0;
+    display: inline-block;
+    max-width: 80%;
+    overflow: hidden;
+    padding: 0;
+    white-space: nowrap;
   }
   input[type="text"], input[type="email"], input[type="search"], input[type="password"], textarea {
     -webkit-appearance: caret;
